<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Netflix Login</string>
    <string name="app_logo_description">Netflix Logo</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account_signup">Do not have account</string>

</resources>
